--- a/Fody.SemVer/Fody.SemVer.csproj
+++ b/Fody.SemVer/Fody.SemVer.csproj
@@ -57,8 +57,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Configuration.cs" />
     <Compile Include="ModuleWeaverBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WeavingException.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
