--- a/Fody.SemVer.Svn/Fody.SemVer.Svn.csproj
+++ b/Fody.SemVer.Svn/Fody.SemVer.Svn.csproj
@@ -55,10 +55,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ModuleWeaver.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Fody.SemVer\Fody.SemVer.csproj">
+      <Project>{6f06df70-4769-4081-9970-b8c2e0314577}</Project>
+      <Name>Fody.SemVer</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
