--- a/Fody.SemVer.Git/packages.config
+++ b/Fody.SemVer.Git/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="FodyCecil" version="1.29.4" targetFramework="net40" developmentDependency="true" />
+  <package id="SharpSvn.1.9-x86" version="1.9003.3799.86" targetFramework="net40" />
 </packages>
