--- a/Fody.SemVer.Git/packages.config
+++ b/Fody.SemVer.Git/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="FodyCecil" version="1.29.4" targetFramework="net40" developmentDependency="true" />
-  <package id="SharpSvn.1.9-x86" version="1.9003.3799.86" targetFramework="net40" />
+  <package id="LibGit2Sharp" version="0.21.0.176" targetFramework="net40" />
+  <package id="LibGit2Sharp.NativeBinaries" version="1.0.119" targetFramework="net40" />
 </packages>
