--- a/.gitignore
+++ b/.gitignore
@@ -142,6 +142,7 @@ publish/
 
 # NuGet Packages
 *.nupkg
+!*nupkg/
 # The packages folder can be ignored because of Package Restore
 **/packages/*
 # except build/, which is used as an MSBuild target.
@@ -210,3 +211,5 @@ FakesAssemblies/
 GeneratedArtifacts/
 _Pvt_Extensions/
 ModelManifest.xml
+*.bak
+NativeBinaries/
