--- a/Fody.SemVer.Svn/Fody.SemVer.Svn.csproj
+++ b/Fody.SemVer.Svn/Fody.SemVer.Svn.csproj
@@ -81,8 +81,8 @@
   <Target Name="BeforeBuild">
   </Target>
   <Target Name="AfterBuild">
-    <Exec Command="ROBOCOPY &quot;$(OutDir)\bin&quot; &quot;$(SolutionDir)\bin&quot; SharpPlink-Win32.svnExe" IgnoreExitCode="true" />
-    <Exec Command="ROBOCOPY &quot;$(OutDir)\bin&quot; &quot;$(SolutionDir)\bin&quot; SharpSvn.dll" IgnoreExitCode="true" />
+    <Exec Command="ROBOCOPY &quot;$(OutDir)\&quot; &quot;$(SolutionDir)\bin&quot; SharpPlink-Win32.svnExe" IgnoreExitCode="true" />
+    <Exec Command="ROBOCOPY &quot;$(OutDir)\&quot; &quot;$(SolutionDir)\bin&quot; SharpSvn.dll" IgnoreExitCode="true" />
     <Exec Command="&quot;$(SolutionDir)Tools\ilmerge.exe&quot; /out:&quot;$(SolutionDir)\bin\Fody.SemVer.Svn.dll&quot; &quot;$(TargetPath)&quot; &quot;$(TargetDir)Fody.SemVer.dll&quot;  /target:library /targetplatform:v4" />
   </Target>
 </Project>
