--- a/Fody.SemVer.Git/Fody.SemVer.Git.csproj
+++ b/Fody.SemVer.Git/Fody.SemVer.Git.csproj
@@ -87,6 +87,6 @@
   </Target>
   <Target Name="AfterBuild">
     <Exec Command="ROBOCOPY &quot;$(OutDir)\NativeBinaries&quot; &quot;$(SolutionDir)\NativeBinaries&quot; *.* /E" IgnoreExitCode="true" />
-    <Exec Command="&quot;$(SolutionDir)Tools\ilmerge.exe&quot; /out:&quot;$(SolutionDir)bin\Fody.SemVer.Git.dll&quot; &quot;$(TargetPath)&quot; &quot;$(TargetDir)LibGit2Sharp.dll&quot; &quot;$(TargetDir)Fody.SemVer.dll&quot;  /target:library /targetplatform:v4" />
+    <Exec Command="&quot;$(SolutionDir)Tools\ilmerge.exe&quot; /out:&quot;$(SolutionDir)bin\SemVer.Git.Fody.dll&quot; &quot;$(TargetPath)&quot; &quot;$(TargetDir)LibGit2Sharp.dll&quot; &quot;$(TargetDir)Fody.SemVer.dll&quot;  /target:library /targetplatform:v4" />
   </Target>
 </Project>
