--- a/Fody.SemVer.Git.nupkg/Package.nuspec
+++ b/Fody.SemVer.Git.nupkg/Package.nuspec
@@ -2,9 +2,9 @@
 
 <package>
   <metadata>
-    <id>Fody.SemVer.Git</id>
+    <id>SemVer.Git.Fody</id>
     <version>1.0.0-alpha3</version>
-    <title>Fody.SemVer.Git</title>
+    <title>SemVer.Git.Fody</title>
     <authors>Andreas Niedermair</authors>
     <description>
       Versions your assemblies according to SemVer based on your Git commit messages.
