--- a/SemVer.Svn.Fody/SemVer.Svn.Fody.csproj
+++ b/SemVer.Svn.Fody/SemVer.Svn.Fody.csproj
@@ -65,13 +65,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\SemVer.Fody\Configuration.cs">
+    <Compile Include="..\SemVer.Git.Fody\Configuration.cs">
       <Link>Configuration.cs</Link>
     </Compile>
-    <Compile Include="..\SemVer.Fody\ModuleWeaverBase.cs">
+    <Compile Include="..\SemVer.Git.Fody\ModuleWeaverBase.cs">
       <Link>ModuleWeaverBase.cs</Link>
     </Compile>
-    <Compile Include="..\SemVer.Fody\WeavingException.cs">
+    <Compile Include="..\SemVer.Git.Fody\WeavingException.cs">
       <Link>WeavingException.cs</Link>
     </Compile>
     <Compile Include="ModuleWeaver.cs" />
