--- a/SemVer.Git.Fody/packages.config
+++ b/SemVer.Git.Fody/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Fody" version="1.29.4" targetFramework="net40" developmentDependency="true" />
   <package id="FodyCecil" version="1.29.4" targetFramework="net40" developmentDependency="true" />
   <package id="LibGit2Sharp" version="0.22.0-pre20151023210959" targetFramework="net40" />
   <package id="LibGit2Sharp.NativeBinaries" version="1.0.106" targetFramework="net40" />
+  <package id="SemVer.Git.Fody" version="1.1.0" targetFramework="net40" />
+  <package id="Stamp.Fody" version="1.2.5" targetFramework="net40" developmentDependency="true" />
 </packages>
