--- a/SemVer.Svn.Fody/packages.config
+++ b/SemVer.Svn.Fody/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Fody" version="1.29.4" targetFramework="net40" developmentDependency="true" />
   <package id="FodyCecil" version="1.29.4" targetFramework="net40" developmentDependency="true" />
+  <package id="SemVer.Git.Fody" version="1.1.0" targetFramework="net40" />
   <package id="SharpSvn.1.9-x86" version="1.9003.3799.86" targetFramework="net40" />
+  <package id="Stamp.Fody" version="1.2.5" targetFramework="net40" developmentDependency="true" />
 </packages>
