--- a/SemVer.Git.Fody/SemVer.Git.Fody.csproj
+++ b/SemVer.Git.Fody/SemVer.Git.Fody.csproj
@@ -78,7 +78,7 @@
   <Target Name="BeforeBuild">
   </Target>
   <Target Name="AfterBuild">
-    <Exec Command="ROBOCOPY &quot;$(OutDir)\NativeBinaries&quot; &quot;$(SolutionDir)\NativeBinaries&quot; *.* /E" IgnoreExitCode="true" />
+    <Exec Command="ROBOCOPY &quot;$(OutDir)\NativeBinaries&quot; &quot;$(SolutionDir)\bin\NativeBinaries&quot; *.* /E" IgnoreExitCode="true" />
     <Exec Command="ROBOCOPY &quot;$(OutDir)\&quot; &quot;$(SolutionDir)\bin&quot; LibGit2Sharp.dll" IgnoreExitCode="true" />
     <Exec Command="ROBOCOPY &quot;$(OutDir)\&quot; &quot;$(SolutionDir)\bin&quot; SemVer.Git.Fody.dll" IgnoreExitCode="true" />
   </Target>
