--- a/SemVer.Git.Fody.nupkg/SemVer.Git.Fody.nupkg.csproj
+++ b/SemVer.Git.Fody.nupkg/SemVer.Git.Fody.nupkg.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="build\SemVer.Git.Fody.targets" />
     <None Include="NuGetPackage.ps1" />
     <None Include="NuGetSetup.ps1" />
     <None Include="NuGet.exe" />
