--- a/SemVer.Git.Fody.nupkg/Package.nuspec
+++ b/SemVer.Git.Fody.nupkg/Package.nuspec
@@ -29,7 +29,7 @@
           target="NativeBinaries\amd64" />
     <file src="..\bin\NativeBinaries\x86\git2-821131f.dll"
           target="NativeBinaries\x86" />
-    <file src="..\bin\SemVer.Fody.Console.exe"
+    <file src="..\bin\SemVer.Git.Fody.Console.exe"
           target="" />
     <file src="build\"
           target="build" />
