--- a/SemVer.Git.Fody/packages.config
+++ b/SemVer.Git.Fody/packages.config
@@ -2,8 +2,10 @@
 <packages>
   <package id="Fody" version="1.29.4" targetFramework="net40" developmentDependency="true" />
   <package id="FodyCecil" version="1.29.4" targetFramework="net40" developmentDependency="true" />
+  <package id="ILMerge" version="2.13.0307" targetFramework="net40" />
   <package id="LibGit2Sharp" version="0.22.0-pre20151023210959" targetFramework="net40" />
   <package id="LibGit2Sharp.NativeBinaries" version="1.0.106" targetFramework="net40" />
+  <package id="MSBuild.ILMerge.Task" version="1.0.5-rc1" targetFramework="net40" />
   <package id="SemVer.Git.Fody" version="1.2.2" targetFramework="net40" />
   <package id="Stamp.Fody" version="1.2.5" targetFramework="net40" developmentDependency="true" />
 </packages>
