--- a/SemVer.Svn.Fody/packages.config
+++ b/SemVer.Svn.Fody/packages.config
@@ -2,6 +2,8 @@
 <packages>
   <package id="Fody" version="1.29.4" targetFramework="net40" developmentDependency="true" />
   <package id="FodyCecil" version="1.29.4" targetFramework="net40" developmentDependency="true" />
+  <package id="ILMerge" version="2.13.0307" targetFramework="net40" />
+  <package id="MSBuild.ILMerge.Task" version="1.0.5-rc1" targetFramework="net40" />
   <package id="SemVer.Git.Fody" version="1.2.2" targetFramework="net40" />
   <package id="SharpSvn.1.9-x86" version="1.9003.3799.86" targetFramework="net40" />
   <package id="Stamp.Fody" version="1.2.5" targetFramework="net40" developmentDependency="true" />
