--- a/SemVer.Svn.Fody/SemVer.Svn.Fody.csproj
+++ b/SemVer.Svn.Fody/SemVer.Svn.Fody.csproj
@@ -73,9 +73,6 @@
     <Compile Include="..\SemVer.Git.Fody\ModuleWeaverBase.cs">
       <Link>ModuleWeaverBase.cs</Link>
     </Compile>
-    <Compile Include="..\SemVer.Git.Fody\WeavingException.cs">
-      <Link>WeavingException.cs</Link>
-    </Compile>
     <Compile Include="ModuleWeaver.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -86,6 +83,12 @@
   <ItemGroup>
     <Content Include="FodyWeavers.xml" />
     <Content Include="ILMergeOrder.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SemVer.Stamp\SemVer.Stamp.csproj">
+      <Project>{44d81acc-4145-4220-88c3-dd5d8fe7fb81}</Project>
+      <Name>SemVer.Stamp</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="BeforeBuild">
