--- a/SemVer.Stamp.Fody/SemVer.Stamp.Fody.csproj
+++ b/SemVer.Stamp.Fody/SemVer.Stamp.Fody.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{44D81ACC-4145-4220-88C3-DD5D8FE7FB81}</ProjectGuid>
+    <ProjectGuid>{B9087E54-C162-48D5-B8A6-699947CCA112}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SemVer.Stamp</RootNamespace>
-    <AssemblyName>SemVer.Stamp</AssemblyName>
+    <RootNamespace>SemVer.Stamp.Fody</RootNamespace>
+    <AssemblyName>SemVer.Stamp.Fody</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -39,8 +39,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="SemVersionGrabberBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WeavingException.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
