--- a/SemVer.Svn.Fody/SemVer.Svn.Fody.csproj
+++ b/SemVer.Svn.Fody/SemVer.Svn.Fody.csproj
@@ -50,6 +50,13 @@
       <HintPath>..\packages\FodyCecil.1.29.4\lib\net40\Mono.Cecil.Rocks.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="SharpSvn, Version=1.9003.3829.100, Culture=neutral, PublicKeyToken=d729672594885a28, processorArchitecture=x86">
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="SharpSvn.UI, Version=1.9003.3829.100, Culture=neutral, PublicKeyToken=33789aa53ca44aa9, processorArchitecture=MSIL">
+      <HintPath>..\packages\SharpSvn.1.9-x86.1.9003.3829.100\lib\net40\SharpSvn.UI.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -59,12 +66,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\SemVer.Git.Fody\Configuration.cs">
-      <Link>Configuration.cs</Link>
-    </Compile>
-    <Compile Include="..\SemVer.Git.Fody\ModuleWeaverBase.cs">
-      <Link>ModuleWeaverBase.cs</Link>
-    </Compile>
     <Compile Include="ModuleWeaver.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -87,17 +88,13 @@
       <Link>SharpSvn.dll</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="..\packages\SharpSvn.1.9-x86.1.9003.3829.100\lib\net40\SharpSvn.UI.dll">
-      <Link>SharpSvn.UI.dll</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
     <Content Include="FodyWeavers.xml" />
     <Content Include="ILMergeOrder.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\SemVer.Stamp.Fody\SemVer.Stamp.Fody.csproj">
+    <ProjectReference Include="..\SemVer.Fody\SemVer.Fody.csproj">
       <Project>{b9087e54-c162-48d5-b8a6-699947cca112}</Project>
-      <Name>SemVer.Stamp.Fody</Name>
+      <Name>SemVer.Fody</Name>
     </ProjectReference>
     <ProjectReference Include="..\SemVer.Stamp.Svn\SemVer.Stamp.Svn.csproj">
       <Project>{bc16772e-21f8-451f-9b16-b65bf5c289a1}</Project>
