--- a/SemVer.Svn.Fody.Console/SemVer.Svn.Fody.Console.csproj
+++ b/SemVer.Svn.Fody.Console/SemVer.Svn.Fody.Console.csproj
@@ -46,9 +46,17 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\SemVer.Svn.Fody\SemVer.Svn.Fody.csproj">
-      <Project>{a421cb55-ce9a-4804-b2af-3c4915b462a9}</Project>
-      <Name>SemVer.Svn.Fody</Name>
+    <ProjectReference Include="..\SemVer.Fody\SemVer.Fody.csproj">
+      <Project>{b9087e54-c162-48d5-b8a6-699947cca112}</Project>
+      <Name>SemVer.Fody</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SemVer.Stamp.Svn\SemVer.Stamp.Svn.csproj">
+      <Project>{bc16772e-21f8-451f-9b16-b65bf5c289a1}</Project>
+      <Name>SemVer.Stamp.Svn</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SemVer.Stamp\SemVer.Stamp.csproj">
+      <Project>{44d81acc-4145-4220-88c3-dd5d8fe7fb81}</Project>
+      <Name>SemVer.Stamp</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
