--- a/SemVer.Git.MSBuild/SemVer.Git.MSBuild.csproj
+++ b/SemVer.Git.MSBuild/SemVer.Git.MSBuild.csproj
@@ -58,6 +58,17 @@
       <Name>SemVer.Stamp</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\SemVer.MSBuild\build\SemVer.MSBuild.targets">
+      <Link>build\SemVer.MSBuild.targets</Link>
+    </None>
+    <None Include="..\SemVer.MSBuild\content\SemVer.MSBuild.props">
+      <Link>content\SemVer.MSBuild.props</Link>
+    </None>
+    <None Include="build\SemVer.Git.MSBuild.targets">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="BeforeBuild">
   </Target>
