--- a/SemVer.MSBuild/SemVer.MSBuild.csproj
+++ b/SemVer.MSBuild/SemVer.MSBuild.csproj
@@ -50,6 +50,15 @@
       <Name>SemVer.Stamp</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="build\SemVer.MSBuild.targets">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="content\SemVer.MSBuild.props">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
